--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,16 @@
             <version>1.9.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.shared</groupId>
+            <artifactId>maven-shared-incremental</artifactId>
+            <version>1.1</version>
+        </dependency>
+
 
     </dependencies>
 
